--- a/index.html
+++ b/index.html
@@ -22,3 +22,13 @@
 </body>
 
 </html>
+<html>
+  <head>
+    <title>Hello world!</title>
+  </head>
+  <body>
+    <h1> Hello world!</h1>
+    <p> This is the first file in my new Git Repo.</p>
+
+  </body>
+</html>
